dark and light theme added done successfully

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html data-theme="light" lang="en">
+<html class="dark" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://i.ibb.co.com/XzXhNtZ/DALL-E-2024-12-07-20-26-28-A-unique-and-modern-favicon-design-for-a-project-named-Equipify-The-desig.webp" />
